HSEARCH-3929 Remove configuration specific to Java 9 or 10 in pom
We won't support building with these JDKs